refactor(mid work | will cleanup + fix test env): it pretty much works just wanna integrate tests

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # Local env vars for debugging
 TS_NODE_IGNORE="false"
 TS_NODE_FILES="true"
+PIXIAN_API_ID=pxnwyvs678vz5hc
+PIXIAN_API_SECRET=74c06k696r38ao4ps2l44vulum78al2ona6m5d5ptuknpt8k9kcq
