--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pixian-ts",
   "version": "0.0.0-development",
   "description": "A template for creating npm packages using TypeScript and VSCode",
+  "type": "module",
   "main": "./lib/index.js",
   "files": [
     "lib/**/*"
@@ -28,7 +29,7 @@
     "url": "https://github.com/ryansonshine"
   },
   "engines": {
-    "node": ">=12.0"
+    "node": ">=18.0"
   },
   "keywords": [
     "boilerplate",
@@ -49,7 +50,7 @@
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/jest": "^27.5.2",
-    "@types/node": "^12.20.11",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
@@ -118,5 +119,10 @@
       "@semantic-release/npm",
       "@semantic-release/github"
     ]
+  },
+  "dependencies": {
+    "form-data": "^4.0.0",
+    "ky": "^1.7.2",
+    "stream-consumers": "^1.0.2"
   }
 }
