--- a/jest.config.json
+++ b/jest.config.json
@@ -1,15 +1,12 @@
 {
-  "preset": "ts-jest",
   "testEnvironment": "node",
   "testMatch": ["**/test/**/*.spec.ts"],
   "collectCoverageFrom": [
     "<rootDir>/src/**/*.ts",
     "!<rootDir>/src/types/**/*.ts"
   ],
-  "globals": {
-    "ts-jest": {
-      "diagnostics": false,
-      "isolatedModules": true
-    }
-  }
+  "transform": {
+    "^.+\\.(ts|tsx)$": "babel-jest"
+  },
+  "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
 }
