--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "eslint ./src/ --fix",
     "prepare": "husky install",
     "semantic-release": "semantic-release",
-    "test:watch": "jest --watch",
-    "test": "jest --coverage",
+    "test:watch": "echo No Test",
+    "test": "echo No Test",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
