--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsup ./src --format cjs,esm --dts --outDir lib",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
     "lint": "eslint ./src/ --fix",
@@ -122,6 +122,7 @@
   "dependencies": {
     "form-data": "^4.0.0",
     "ky": "^1.7.2",
-    "stream-consumers": "^1.0.2"
+    "stream-consumers": "^1.0.2",
+    "tsup": "^8.2.4"
   }
 }
